tests/e2e/return_output.error
Error: syntax error in story at line 2

2|      return http fetch
        ^^^^^^^^^^^^^^^^^

E0110: `return` expected. Did you miss to add `returns any`?
