tests/e2e/return_output.story
function foo
	return http fetch
